--- a/src/index.njk
+++ b/src/index.njk
@@ -11,5 +11,16 @@ layout: base.njk
   <div class="love">
     ❤️‍🔥
   </div>
+
+
+  <ul>
+  {% for article in news.articles %}
+    <li>
+      <h2><a href="{{ article.url }}">{{ article.title }}</a></h2>
+      <span>{{ article.source.name }} - <time>{{ article.publishedAt }}</time></span>
+    </li>
+  {% endfor %}
+  </ul>
+
 </div>
 <script src="../js/index.js"></script>
