--- a/src/localized.njk
+++ b/src/localized.njk
@@ -1,6 +1,11 @@
 ---
-title: A page for you
+title: Daily briefing
 layout: base.njk
+pagination:
+  data: news
+  size: 1
+  alias: news
+permalink: /{{ news.country }}/index.html
 ---
 
 <div class="container">
@@ -14,7 +19,7 @@ layout: base.njk
 
 
   <ul>
-  {% for article in news[0].articles %}
+  {% for article in news.articles %}
     <li>
       <h2><a href="{{ article.url }}">{{ article.title }}</a></h2>
       <span>{{ article.source.name }} - <time>{{ article.publishedAt }}</time></span>
